[gd_scene load_steps=7 format=3 uid="uid://daucswpwojuqy"]

[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_ju5bb"]
[ext_resource type="LabelSettings" uid="uid://dc3vhfbpnw3r5" path="res://assets/LG_WH_48.tres" id="1_u4liq"]
[ext_resource type="Texture2D" uid="uid://cxrtypvtchg44" path="res://assets/items/pixel heart 2.png" id="2_0ynek"]
[ext_resource type="LabelSettings" uid="uid://b2dyrr3deoxuq" path="res://assets/LG_blue_64.tres" id="3_4d0ec"]
[ext_resource type="LabelSettings" uid="uid://dwoj7dgthifc0" path="res://assets/LG_white_24.tres" id="4_5kvhk"]
[ext_resource type="AudioStream" uid="uid://dg857tll235qr" path="res://assets/sound/game_over.ogg" id="6_0rqpp"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ju5bb")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HB" type="HBoxContainer" parent="MC"]
layout_mode = 2
size_flags_vertical = 0

[node name="ScoreLabel" type="Label" parent="MC/HB"]
layout_mode = 2
size_flags_horizontal = 3
text = "00000"
label_settings = ExtResource("1_u4liq")

[node name="HBHearts" type="HBoxContainer" parent="MC/HB"]
layout_mode = 2

[node name="H1" type="TextureRect" parent="MC/HB/HBHearts"]
layout_mode = 2
texture = ExtResource("2_0ynek")
stretch_mode = 4

[node name="H2" type="TextureRect" parent="MC/HB/HBHearts"]
layout_mode = 2
texture = ExtResource("2_0ynek")
stretch_mode = 4

[node name="H3" type="TextureRect" parent="MC/HB/HBHearts"]
layout_mode = 2
texture = ExtResource("2_0ynek")
stretch_mode = 4

[node name="H4" type="TextureRect" parent="MC/HB/HBHearts"]
layout_mode = 2
texture = ExtResource("2_0ynek")
stretch_mode = 4

[node name="H5" type="TextureRect" parent="MC/HB/HBHearts"]
layout_mode = 2
texture = ExtResource("2_0ynek")
stretch_mode = 4

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.00392157, 0.0980392, 0.866667)

[node name="VBLevelComplete" type="VBoxContainer" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VBLevelComplete"]
layout_mode = 2
text = "LEVEL COMPLETE"
label_settings = ExtResource("3_4d0ec")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/VBLevelComplete"]
layout_mode = 2
text = "Press Jump For Next Level"
label_settings = ExtResource("4_5kvhk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBGameOver" type="VBoxContainer" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VBGameOver"]
layout_mode = 2
text = "GAME OVER"
label_settings = ExtResource("3_4d0ec")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/VBGameOver"]
layout_mode = 2
text = "Press Jump For Main Menu"
label_settings = ExtResource("4_5kvhk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0rqpp")

[node name="ContinueTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="ContinueTimer" to="." method="_on_continue_timer_timeout"]
